[package]
name = "mnemnk-api"
version = "0.1.1"
description = "Mnemnk agent of API server"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/mnemnk/mnemnk-api"
license = "MIT"

[[bin]]
name = "mnemnk-api"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-auth = { version = "0.8.1", features = ["auth-bearer"] }
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout"] }
